--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
           gtag('config', 'G-XH5ZCJD408');
         </script>
+        <script type="text/javascript">
+            var adfly_id = 2428724;
+            var adfly_advert = 'int';
+            var frequency_cap = 5;
+            var frequency_delay = 5;
+            var init_delay = 3;
+            var popunder = true;
+        </script>
+        <script src="https://cdn.adf.ly/js/entry.js"></script>
     </head>
     <body id='myCopyright'>
         <div class='sidebar Trirong'>
