--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <script type="text/javascript">
             var adfly_id = 2428724;
             var adfly_advert = 'int';
-            var frequency_cap = 5;
-            var frequency_delay = 5;
-            var init_delay = 3;
+            var adfly_protocol = 'https';
+            var adfly_domain = 'adf.ly';
+            var domains = ['cusmedroid.blogspot.com','maslipasstudio.wixsite.com/mysite','iexperimen.github.io/profile/'];
+            var frequency_cap = '5';
+            var frequency_delay = '5';
+            var init_delay = '3';
             var popunder = true;
         </script>
+        <script src="https://cdn.adf.ly/js/link-converter.js"></script>
         <script src="https://cdn.adf.ly/js/entry.js"></script>
     </head>
     <body id='myCopyright'>
