--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         </script>
         <script src="https://cdn.adf.ly/js/link-converter.js"></script>
         <script src="https://cdn.adf.ly/js/entry.js"></script>
+        
+        <script async custom-element="amp-auto-ads"
+                src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+        </script>
     </head>
     <body id='myCopyright'>
         <div class='sidebar Trirong'>
@@ -74,6 +78,9 @@
     <span><</span>/body>
 <span><</span>/html>
                 </pre>
+                <amp-auto-ads type="adsense"
+                        data-ad-client="ca-pub-9599229644477464">
+                </amp-auto-ads>
                 <h2 class='Audiowide animate-left'>Versi 2</h2>
                 <img title='Navigation Bottom by CusMeDroid' alt='Navigation Bottom by CusMeDroid' class='patobo animate-right' width='80%' src='versi_2_cusmedroid_bottom_nav.jpg' />
                 <br>
