--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 <img title='Navigation Bottom by CusMeDroid' alt='Navigation Bottom by CusMeDroid' class='patobo animate-right' width='80%' src='versi_1_cusmedroid_bottom_nav.jpg' />
                 <br>
                 <b class='Trirong patobo animate-left'>Follow the code below :</b>
+                <amp-ad width="100vw" height="320"
+                     type="adsense"
+                     data-ad-client="ca-pub-9599229644477464"
+                     data-ad-slot="3647395849"
+                     data-auto-format="rspv"
+                     data-full-width="">
+                     <div overflow=""></div>
+                </amp-ad>
                 <pre class='Trirong padd-10 mybasebg animate-right black'>
 <span><</span>!DOCTYPE html>
 <span><</span>html>
