--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
           gtag('config', 'G-XH5ZCJD408');
         </script>
+        <!-- Adfly
         <script type="text/javascript">
             var adfly_id = 2428724;
             var adfly_advert = 'int';
@@ -36,6 +37,7 @@
         </script>
         <script src="https://cdn.adf.ly/js/link-converter.js"></script>
         <script src="https://cdn.adf.ly/js/entry.js"></script>
+        -->
         
         <script async custom-element="amp-auto-ads"
                 src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
