--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <span><</span>/head>
     <span><</span>body>
         <span><</span>div class="header animate-bottom">
-            <span><</span>div class="" align="center">
+            <span><</span>div class="row" align="center">
                 <span><</span>div class="column-header"><span><</span>a href="#" title="Home" class="bbtn"><span><</span>i class="fa fa-home" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
                 <span><</span>div class="column-header"><span><</span>a href="#collection" title="Collection" class="bbtn"><span><</span>i class="fa fa-picture-o" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
                 <span><</span>div class="column-header"><span><</span>a href="#like" title="Like" class="bbtn"><span><</span>i class="fa fa-heart" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
@@ -85,6 +85,8 @@
                 <span><</span>div class="column-header" id='musicpa2'><span><</span>a title="Pause" class="bbtn"><span><</span>i class="fa fa-pause" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
             <span><</span>/div>
         <span><</span>/div>
+        
+        <span><</span>script type='text/javascript' src='https://cusmedroid.github.io/js/me_nav_bottom.js'><span><</span>/script>
     <span><</span>/body>
 <span><</span>/html>
                 </pre>
@@ -115,6 +117,8 @@
                 <span><</span>/a>
             <span><</span>/div>
         <span><</span>/div>
+        
+        <span><</span>script type='text/javascript' src='https://cusmedroid.github.io/js/me_nav_bottom.js'><span><</span>/script>
     <span><</span>/body>
 <span><</span>/html>
                 </pre>
