--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <span><</span>!DOCTYPE html>
 <span><</span>html>
     <span><</span>head>
-        <span><</span>title>Navigation Bottom | CusMeDroid</title>
+        <span><</span>title>Navigation Bottom | CusMeDroid<span><</span>/title>
         <span><</span>link rel='stylesheet' type='text/css' href='https://cusmedroid.github.io/css/style.css'>
     <span><</span>/head>
     <span><</span>body>
@@ -99,7 +99,7 @@
 <span><</span>!DOCTYPE html>
 <span><</span>html>
     <span><</span>head>
-        <span><</span>title>Navigation Bottom | CusMeDroid</title>
+        <span><</span>title>Navigation Bottom | CusMeDroid<span><</span>/title>
         <span><</span>link rel='stylesheet' type='text/css' href='https://cusmedroid.github.io/css/style.css'>
     <span><</span>/head>
     <span><</span>body>
