--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <span><</span>head>
         <span><</span>title>Navigation Bottom | CusMeDroid<span><</span>/title>
         <span><</span>link rel='stylesheet' type='text/css' href='https://cusmedroid.github.io/css/style.css'>
+        <span><</span>link rel='stylesheet' href='https://cusmedroid.github.io/fontawesome-4/css/font-awesome.min.css'>
     <span><</span>/head>
     <span><</span>body>
         <span><</span>div class="header animate-bottom">
@@ -101,6 +102,7 @@
     <span><</span>head>
         <span><</span>title>Navigation Bottom | CusMeDroid<span><</span>/title>
         <span><</span>link rel='stylesheet' type='text/css' href='https://cusmedroid.github.io/css/style.css'>
+        <span><</span>link rel='stylesheet' href='https://cusmedroid.github.io/fontawesome-4/css/font-awesome.min.css'>
     <span><</span>/head>
     <span><</span>body>
         <span><</span>div class='header animate-bottom'>
