--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
                     With a cusmedroid stylesheet, it makes it very easy for you to pick up some style features.<br>
                     And you can specify an action that works for moving a page with the href in tag a or you can use the id with a click listener or you can also add onclick using the javascript language.
                 </p>
-                <p class='Trirong patobo animate-left'>If you want the navigation bottom view on the desktop delete the header class.</p>
+                <p class='Trirong patobo animate-left'>If you want the navigation bottom view on the desktop delete the header class and add style.</p>
+                <b class='Trirong patobo animate-right'>Example :</b>
+                <pre class='Trirong padd-10 mybasebg animate-left black'>
+<span><</span>div style='width: 100%;position: fixed;bottom: 0;' class='animate-bottom'>
+    .......
+<span><</span>/div>
+                </pre>
 
                 <div class='home-bottom martobo Trirong size-18' align='right'>
                     <cusmedroid></cusmedroid>
