--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <span><</span>link rel='stylesheet' href='https://cusmedroid.github.io/fontawesome-4/css/font-awesome.min.css'>
     <span><</span>/head>
     <span><</span>body>
-        <span><</span>div class="header animate-bottom">
+        <span><</span>div class="header padd-8 animate-bottom">
             <span><</span>div class="row" align="center">
                 <span><</span>div class="column-header"><span><</span>a href="#" title="Home" class="bbtn"><span><</span>i class="fa fa-home" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
                 <span><</span>div class="column-header"><span><</span>a href="#collection" title="Collection" class="bbtn"><span><</span>i class="fa fa-picture-o" aria-hidden="true"><span><</span>/i><span><</span>/a><span><</span>/div>
