--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <span><</span>body>
         <span><</span>div class='header animate-bottom'>
             <span><</span>div class='me-bottom-bar' align='center'>
-                <span><</span>a onclick='meHome()' title='Home' class='me-menu-item me-current'><span><</span>i class='fa fa-home' aria-hidden='true'><span><</span>/i><span><</span>/a>
-                <span><</span>a onclick='meCollect()' title='Collection' class='me-menu-item'><span><</span>i class='fa fa-picture-o' aria-hidden='true' style='margin-left: -1px;'><span><</span>/i><span><</span>/a>
-                <span><</span>a onclick='meLike()' title='Like' class='me-menu-item'><span><</span>i class='fa fa-heart' aria-hidden='true' style='margin-left: -1px;'><span><</span>/i><span><</span>/a>
+                <span><</span>a title='Home' class='me-menu-item me-current'><span><</span>i class='fa fa-home' aria-hidden='true'><span><</span>/i><span><</span>/a>
+                <span><</span>a title='Collection' class='me-menu-item'><span><</span>i class='fa fa-picture-o' aria-hidden='true' style='margin-left: -1px;'><span><</span>/i><span><</span>/a>
+                <span><</span>a title='Like' class='me-menu-item'><span><</span>i class='fa fa-heart' aria-hidden='true' style='margin-left: -1px;'><span><</span>/i><span><</span>/a>
                 <span><</span>a class='me-nav-indicator'><span><</span>/a>
                 <span><</span>a title='Play/Pause' class='me-menu-item'>
                     <span><</span>i class='fa fa-play' aria-hidden='true' id='musicp2'><span><</span>/i>
