--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name='description' content='Cusmedroid is an android studio application development project name. the name was created by iyortml alias suryo dwijayanto. Initially cusmedroid was a custom rom project on smartphone android, at that time in 2014 - 2015 cusmedroid was still looking for identity, until now - then cusmedroid will be the unique name of me who doesn’t have a team.'>
         <meta name='keywords' content='cusmedroid, iyortml, learn php with cusmedroid, learn php with iyortml, cusmedroid android, cusmedroid developer, developer indonesia, made in indonesia, website, php, html, css, js, xml, java, api, apikey, mysqli, phpmyadmin, android studio, android-studio, Suryo DwiJayanto, suryodwijayanto, portfolio, cv, curriculum vitae, profil, biography'/>
         <meta name='author' content='CusMeDroid'>
+        <meta property='og:image' content='../favicon.ico'>
+        <meta property='og:image:type' content='image/jpeg'>
+        <meta property='og:image:width' content='200'>
+        <meta property='og:image:height' content='200'>
         <link rel='stylesheet' type='text/css' href='../css/style.css'>
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong'>
         <link rel='stylesheet' href='../fontawesome-4/css/font-awesome.min.css'>
