--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class='padd-16'>
                 <h1 class='Audiowide animate-left'>Navigation Bottom</h1>
                 <p class='Trirong patobo animate-right'>How do i create bottom navigation in mobile interface by using styles from CusMeDroid?</p>
-                <h2 class='Audiowide animate-left'>Versi 1</h2>
+                <h2 class='Audiowide animate-left'>Version 1</h2>
                 <img title='Navigation Bottom by CusMeDroid' alt='Navigation Bottom by CusMeDroid' class='patobo animate-right' width='80%' src='versi_1_cusmedroid_bottom_nav.jpg' />
                 <br>
                 <b class='Trirong patobo animate-left'>Follow the code below :</b>
@@ -96,7 +96,7 @@
                 <amp-auto-ads type="adsense"
                         data-ad-client="ca-pub-9599229644477464">
                 </amp-auto-ads>
-                <h2 class='Audiowide animate-left'>Versi 2</h2>
+                <h2 class='Audiowide animate-left'>Version 2</h2>
                 <img title='Navigation Bottom by CusMeDroid' alt='Navigation Bottom by CusMeDroid' class='patobo animate-right' width='80%' src='versi_2_cusmedroid_bottom_nav.jpg' />
                 <br>
                 <b class='Trirong patobo animate-left'>Follow the code below :</b>
